fix typos in readme and html

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
               <!-- Modal body -->
               <div class="modal-body">
-                This program only excepts numbers.
+                This program only accepts numbers.
               </div>
 
               <!-- Modal footer -->
